--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
+package-lock.json
+yarn.lock
 
 # dotenv environment variables file
 .env
@@ -90,3 +92,6 @@ Temporary Items
 .apdisk
 
 # End of https://www.gitignore.io/api/osx,node
+
+# JetBrains IDE temporary files
+.idea
